# vector-search-engine

./: .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: compare.py  ef_sweep.py  memory.py
playground/: server.py
playground/static/: index.html
results/: fashion-mnist-784-euclidean.json  sift-128-euclidean.json
tests/: test_datasets.py  test_distances.py  test_eval.py  test_flat.py  test_hnsw.py  test_playground.py  test_trace.py
vecstore/: __init__.py  datasets.py  distances.py  eval.py  flat.py  hnsw.py  trace.py
